--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ ext {
     supportLibraryVersion = '27.1.1'
     playServicesVersion = '10.0.1'
     mapUtilsServices = '0.4.2'
-    daggerVersion = '2.2'
+    daggerVersion = '2.45'
     raizLabsDBFlow = '3.1.1'
     espressoVersion = '2.2.2'
     runnerVersion = '0.4.1'
@@ -26,5 +26,6 @@ ext {
     butterKnifeVersion = '8.0.1'
     mifosPasscodeVersion = '1.0.0'
     preference = '1.1.0'
-
+    sdk_Version = '1.0.2'
+    fineractClientVersion = '2.0.3'
 }
