--- a/mifosng-android/build.gradle
+++ b/mifosng-android/build.gradle
@@ -147,7 +147,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
     // You must install or update the Support Repository through the SDK manager to use this dependency.
@@ -187,7 +187,7 @@ dependencies {
     //Dagger dependencies
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
     implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
-    compileOnly 'javax.annotation:jsr250-api:1.0'                //Required by Dagger2
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'             //Required by Dagger2
     kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
 
     //Butter Knife
@@ -214,7 +214,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okHttp3Version"
     implementation "com.jakewharton.fliptables:fliptables:$rootProject.flipTableVersion"
     implementation 'com.github.therajanmaurya:Sweet-Error:1.0.0'
-    implementation 'javax.annotation:jsr250-api:1.0@jar'
+//    implementation 'javax.annotation:jsr250-api:1.0@jar'
 
     implementation 'io.reactivex:rxandroid:1.1.0'
     implementation 'io.reactivex:rxjava:1.1.4'
@@ -256,12 +256,24 @@ dependencies {
     implementation 'com.evernote:android-job:1.2.6'
 
     // androidx annotations
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.annotation:annotation:1.6.0'
 
     //card view
     implementation 'androidx.cardview:cardview:1.0.0'
     //preferences
     implementation "androidx.preference:preference:$preference"
+
+//    implementation('javax.annotation:javax.annotation-api:1.3.2') {
+//        exclude group: 'javax.annotation', module: 'javax.annotation.Generated'
+//    }
+//
+//    implementation('javax.annotation:jsr250-api:1.0') {
+//        exclude group: 'javax.annotation', module: 'Generated'
+//    }
+
+    implementation "com.github.openMF:mifos-android-sdk-arch:$sdk_Version"
+
+    implementation ("com.github.openMF:fineract-client:$fineractClientVersion")
 }
 /*
 All direct/transitive dependencies shared between your test and production APKs need to be
