--- a/mifosng-android/build.gradle
+++ b/mifosng-android/build.gradle
@@ -175,7 +175,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation "com.google.android.gms:play-services-places:$rootProject.playServicesVersion"
     implementation "com.google.android.gms:play-services-location:$rootProject.playServicesVersion"
     implementation "com.google.android.gms:play-services-maps:$rootProject.playServicesVersion"
@@ -268,6 +268,10 @@ dependencies {
 
     //Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
+    // Navigation Components
+    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
 
 }
 /*
