--- a/build.gradle
+++ b/build.gradle
@@ -132,4 +132,16 @@ ext {
 
     // arch core testing
     archCoreVersion = '2.2.0'
+
+    // compose version
+    composeVersion = '1.5.4'
+
+    // compose compiler
+    composeCompiler = '1.5.8'
+
+    // compose Activity version
+    composeActivity = '1.8.2'
+
+    // material Version
+    materialVersion = '1.2.0-rc01'
 }
